# cli_task_mgr

./: CMakeLists.txt
db/: schema.sql
include/: Database_Manager.hpp  Task.hpp
src/: Database_Manager.cpp  main.cpp
